--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="TextUtil is a utility to manipulate your text." />
+        <meta
+            name="description"
+            content="TextUtil is a word counter and character counter utility to manipulate your text in the way you want. you can remove extra spaces, copy the manipulated text as well as convert your text from Uppercase to Lowercase and Lowercase to Uppercase."
+        />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link
@@ -14,7 +17,10 @@
             integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
             crossorigin="anonymous"
         />
-        <title>TextUtils - Home</title>
+        <title>
+            TextUtils - Word Counter | Character Counter | Remove Extra Spaces | lowercase to
+            Uppercase | Uppercase to Lowercase
+        </title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
